tests/ui/unexpected_colon.stderr
error: no rules expected the token `:`
 --> tests/ui/unexpected_colon.rs:4:14
  |
4 |     plist!({ : true });
  |              ^ no rules expected this token in macro call
  |
  = note: while trying to match end of macro
