tests/ui/unexpected_colon.rs
use plist::plist;

fn main() {
    plist!({ : true });
}
